section-1 is done

--- a/page-1/page-1.html
+++ b/page-1/page-1.html
@@ -14,9 +14,51 @@
        </aside> 
        
        <aside class="buttons">
-           <button class="but-2">Sign in</button>
-           <button class="but-1">Sign up</button>
+        <div class="search-box">
+            <form action="">
+                <input type="search" name="" id="" placeholder="search...">
+                <button class="search-but"><img src="../images/search.png" alt=""></button>
+            </form>
+        </div>
+        <a href="../admin-panel/build/login.html">
+            <button class="but-2">Sign in</button>
+        </a>
+        <a href="../admin-panel/build/register.html">
+            <button class="but-1">Sign up</button>
+        </a>
        </aside>
     </nav>
+
+    <header class="head">
+        <aside class="left">
+            <h1>Книги от  А до Я</h1>
+            <p class="">
+                На нашем сайте можно найти книгу на любой вкус. Большой ассортимент. Интересные сюжеты.
+            </p>
+            <button class="but-3">Перейти в каталог</button>
+        </aside>
+        <aside class="rost">
+            <img src="../images/Книги.png" alt="">
+            <p class="t-1">Комплект книг Марка Мэнсона</p>
+            <p class="t-2">ТОНКОЕ ИСКУССТВО ПОФИГИЗМА. 
+                ВСЕ ХРЕНОВО. МУЖСКИЕ ПРАВИЛА.</p>
+        </aside>
+    </header>
+
+    <main>
+        <section class="section-1">
+            <aside class="aside-1">
+                <h2 class="">Горячие поступления</h2>
+            </aside>
+            <aside class="aside-2">
+                <p class="">Фантастика</p>
+                <p class="">Саморазвитие</p>
+                <p class="">Саморазвитие</p>
+                <p class="">Саморазвитие</p>
+                <p class="">Саморазвитие</p>
+                <p class="">Саморазвитие</p>
+            </aside>
+        </section>
+    </main>
 </body>
 </html>
