section-2 is done

--- a/page-1/page-1.html
+++ b/page-1/page-1.html
@@ -59,6 +59,100 @@
                 <p class="">Саморазвитие</p>
             </aside>
         </section>
+
+        <section class="section-2">
+            <aside class="box">
+                <img src="../images/book-1.png" alt="">
+                <p class="p-01">Порядок в Хаосе</p>
+                <p class="p-02">Константин Коптелов</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-2.png" alt="">
+                <p class="p-01">Смарагдова книга
+                </p>
+                <p class="p-02">Керстин Гир</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-3.png" alt="">
+                <p class="p-01">Зося з вулиці Котячої</p>
+                <p class="p-02">Агнешка Тишка</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-4.png" alt="">
+                <p class="p-01">Мотиватор</p>
+                <p class="p-02">Наталія Зотова</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-5.png" alt="">
+                <p class="p-01">Без маски</p>
+                <p class="p-02">Михаил Бурняшев</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+            <aside class="box">
+                <img src="../images/book-6.jpg" alt="">
+                <p class="p-01">Ахтарони адаб</p>
+                <p class="p-02">Насри Муосир</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+            <aside class="box">
+                <img src="../images/book-7.png" alt="">
+                <p class="p-01">Смерть Ростовшика</p>
+                <p class="p-02">Садриддин Айни</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+            <aside class="box">
+                <img src="../images/book-8.png" alt="">
+                <p class="p-01">Гулистон</p>
+                <p class="p-02">Садии Шерози</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-9.png" alt="">
+                <p class="p-01">Абуалли ибн Сино</p>
+                <p class="p-02">Абуалли ибн Сино</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-10.png" alt="">
+                <p class="p-01">Мой талисман</p>
+                <p class="p-02">Александр Пушкин</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-11.jpg" alt="">
+                <p class="p-01">Война или мир</p>
+                <p class="p-02">Лев Толстой</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+
+            <aside class="box">
+                <img src="../images/book-12.jpg" alt="">
+                <p class="p-01">Полные работы</p>
+                <p class="p-02">Уилйам Шекспир</p>
+                <button class="but-4">Подробнее</button>
+            </aside>
+        </section>
+
+        <div class="center">
+            <h2>Каталог</h2>
+        </div>
+
+        <section class="section-3">
+            <aside class="boxs">
+                <p class="text-p">Книги</p>
+            </aside>
+        </section>
     </main>
 </body>
 </html>
